--- a/src/_variables.sass
+++ b/src/_variables.sass
@@ -1,8 +1,11 @@
 /*Variables*/
 $msf-primary-color:#333333
 $msf-primary-dark-color:#1e1e1e
+$msf-primary-white-color:#ffffff //kp cambiar cuando quiera el nuevo diseño(#ffffff) old diseño (#1e1e1e)
 $msf-primary-light-color:#3d3d3d
 $msf-secondary-color:#01abec
+$msf-secondary-color-orange:#ED5C27 //kp cambiar cuando quiera el nuevo diseño(#ED5C27) old diseño (#01abec)
+$msf-secondary-color-light:#ed5c2742  //kp cambiar cuando quiera el nuevo diseño(#ed5c2742) / FBD5C7
 $msf-secondary-variant-color:#f7f8f8
 $msf-background-color:#edeef0
 $msf-surface-color:#5b5b5f
@@ -12,4 +15,5 @@ $msf-login-font-color: #5b5b5f
 $msf-font-family:Roboto,"Helvetica Neue",sans-serif
 $msf-font-size: 12px
 $msf-font-color: #ffffff
+$msf-font-color-black: #1e1e1e //kp cambiar cuando quiera el nuevo diseño(#1e1e1e) / old color (#ffffff)
 $msf-little-font-color: #bfb9b9
