--- a/src/styles.sass
+++ b/src/styles.sass
@@ -45,7 +45,7 @@
 
 
 body
-    background-image: url("assets/images/fondo.png")
+    background-color: #1e1e1e
     font-family: $msf-font-family
     font-size: $msf-font-size
     margin: 0
@@ -571,7 +571,7 @@ p
 .login-card input[type="text"], .login-card input[type="password"],.login-card  input[type="number"],.login-card input[type="email"]
     padding: 10px
     width: 230px
-    outline: none    
+    outline: none
     border: none
     // color: white //20190423
     color: $msf-font-color-black
@@ -971,7 +971,7 @@ input::-webkit-outer-spin-button, input::-webkit-inner-spin-button
     display: inline-block
     width: 30px
     height: 30px
-    margin-left: 30px
+    margin-left: 17px
     margin-top: 17px
     cursor: pointer
 
@@ -2877,11 +2877,11 @@ table.datasource
     color: $msf-secondary-color-orange !important
 
 //kp20190423
-.login-form .mat-checkbox-frame 
+.login-form .mat-checkbox-frame
     // border-color: $msf-font-color !important kp20032019
     border-color: $msf-font-color-black !important
 
-//kp20190423  
+//kp20190423
 .mat-icon.input_img
     color: #ED5C27 !important
 
@@ -3318,7 +3318,7 @@ div
     font-size: 14px
 
 //kp20190423
-.login-check .mat-checkbox-label 
+.login-check .mat-checkbox-label
     color: $msf-font-color-black !important
 
 
