--- a/src/app/web-services/web-services.component.css
+++ b/src/app/web-services/web-services.component.css
@@ -244,3 +244,7 @@ textarea.mat-input-element {
 .mat-column-required {
     width: 10px;
 }
+
+.placeholder-color.mat-input-placeholder {
+    color: red;
+}
