--- a/src/app/web-services/web-services.component.html
+++ b/src/app/web-services/web-services.component.html
@@ -64,7 +64,7 @@
                 <ng-template matStepLabel>Select Data Source</ng-template>
                 <!-- <div [hidden]="queryEdit"> -->
                 <div [ngClass]="queryEdit  ? 'mostrar' : 'ocultar'"
-                    style="height: 100%; background-color:#232323; padding: 30px">
+                    style="height: 100%; background-color:#232323; padding: 20px 30px">
                     <div
                         style="display: flex !important; flex-direction: row; flex-flow: row wrap;margin-left:100px;margin-top:20px;">
                         <div style="width: 30%;">
