--- a/src/app/msf-loading/msf-loading.component.html
+++ b/src/app/msf-loading/msf-loading.component.html
@@ -1,2 +1,6 @@
 <div [ngClass]="globals.isLoading? 'tab-show':'tab-hide'" id='loading-panel' class='loading-panel'>
+    <button style="margin-top: 30px" mat-button class="cancel-button" (click)="cancelLoading()">
+        Cancel
+    <mat-icon  class="close-icon">close</mat-icon> 
+    </button>
 </div>
